--- a/pom.xml
+++ b/pom.xml
@@ -361,40 +361,7 @@
           <groupId>org.springframework</groupId>
           <artifactId>spring-webmvc</artifactId>
       </dependency>
-      <dependency>
-          <groupId>org.springframework.security</groupId>
-          <artifactId>spring-security-core</artifactId>
-          <version>${spring.security.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.springframework.security</groupId>
-          <artifactId>spring-security-config</artifactId>
-          <version>${spring.security.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.springframework.security</groupId>
-          <artifactId>spring-security-ldap</artifactId>
-          <version>${spring.security.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.springframework.security</groupId>
-          <artifactId>spring-security-taglibs</artifactId>
-          <version>${spring.security.version}</version>
-          <exclusions>
-              <exclusion>
-                  <artifactId>spring-expression</artifactId>
-                  <groupId>org.springframework</groupId>
-              </exclusion>
-              <exclusion>
-                  <artifactId>spring-context</artifactId>
-                  <groupId>org.springframework</groupId>
-              </exclusion>
-              <exclusion>
-                  <artifactId>spring-web</artifactId>
-                  <groupId>org.springframework</groupId>
-              </exclusion>
-          </exclusions>
-      </dependency>
+
       <dependency>
           <groupId>org.subethamail</groupId>
           <artifactId>subethasmtp-wiser</artifactId>
@@ -462,6 +429,18 @@
           </exclusions>
       </dependency>
 
+
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-core</artifactId>
+          <version>1.2.3</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>druid</artifactId>
+          <version>1.0.15</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>ws</finalName>
