--- a/pom.xml
+++ b/pom.xml
@@ -437,9 +437,27 @@
       </dependency>
 
       <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-web</artifactId>
+          <version>1.2.3</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-spring</artifactId>
+          <version>1.2.3</version>
+      </dependency>
+
+      <dependency>
           <groupId>com.alibaba</groupId>
           <artifactId>druid</artifactId>
           <version>1.0.15</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.shiro</groupId>
+          <artifactId>shiro-quartz</artifactId>
+          <version>1.2.3</version>
       </dependency>
   </dependencies>
   <build>
